Split main list into language samples, added functionality for experiment

--- a/experiments/01_idiom_comprehension/experiment.html
+++ b/experiments/01_idiom_comprehension/experiment.html
@@ -14,8 +14,10 @@
 
 
         <!-- Tell the file to run some .js files -->
+        <script src="./js/idiomtrials.js"></script>
         <script src="./js/util.js"></script>
         <script src="./js/experiment.js"></script>
+        
 
         
         <!-- This is the name that will appear on the browser tab. -->
