--- a/experiments/01_idiom_comprehension/experiment.html
+++ b/experiments/01_idiom_comprehension/experiment.html
@@ -1,26 +1,33 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <!-- link the CSS file you made-->
-        <link href="./css/experiment.css" rel="stylesheet" type="text/css" />
 
-        <!-- basic jsPsych functionality -->
-        <script src="../jspsych/dist/jspsych.js"></script>
-        <script src="../jspsych/dist/plugin-survey-multi-choice.js"></script>
-        <script src="../jspsych/dist/plugin-html-button-response.js"></script>
+<head>
+    <!-- link the CSS file you made-->
+    <link href="./css/experiment.css" rel="stylesheet" type="text/css" />
 
-        <!-- default jsPsych stylesheet -->
-        <link href="../jspsych/dist/jspsych.css" rel="stylesheet" type="text/css" />
+    <!-- basic jsPsych functionality -->
+    <script src="../jspsych/dist/jspsych.js"></script>
+    <script src="../jspsych/dist/plugin-survey-multi-choice.js"></script>
+    <script src="../jspsych/dist/plugin-html-button-response.js"></script>
+    <script src="../jspsych/dist/plugin-survey.js"></script>
+    <link rel="stylesheet" href="https://unpkg.com/@jspsych/plugin-survey@0.2.1/css/survey.css">
+
+    <!-- default jsPsych stylesheet -->
+    <link href="../jspsych/dist/jspsych.css" rel="stylesheet" type="text/css" />
+
+    <!-- jQuery -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <!-- Proliferate -->
+    <script src="https://proliferate.alps.science/static/js/proliferate.js" type="text/javascript"></script>
+    <!-- Tell the file to run some .js files -->
+    <script src="./js/idiomtrials.js"></script>
+    <script src="./js/util.js"></script>
+    <script src="./js/experiment.js"></script>
 
 
-        <!-- Tell the file to run some .js files -->
-        <script src="./js/idiomtrials.js"></script>
-        <script src="./js/util.js"></script>
-        <script src="./js/experiment.js"></script>
-        
 
-        
-        <!-- This is the name that will appear on the browser tab. -->
-        <title>Idiom Experiment</title>
-    </head>
+    <!-- This is the name that will appear on the browser tab. -->
+    <title>Idiom Experiment</title>
+</head>
+
 </html>
